# RAG

./: README.md  pyproject.toml
Azure/: blob.py
ETL/: crossref.py  wiley_doi.py
blob_utils/: from_blob.py
docling/: add_two_articles.py  chunking.py  embedding.py  extraction.py  search.py
docling/data/lancedb/docling.lance/_transactions/: 0-1d4d47d4-2d6b-472a-a214-ef2bb3306d69.txn  0-df8bdb42-d15b-4523-8a08-cdd792184afe.txn  1-0e354360-6502-4ab2-b12e-51b565ee93c7.txn  1-6f5801ba-c0b9-4ca4-bc23-ea6a92d95c83.txn  2-d1cca4b3-48b6-4d5b-9820-be3ad5fcf7ae.txn  3-73672a28-64e2-4052-bb07-2255c4e15e11.txn  4-b9d4ba6c-64d8-4d6d-b684-46cfb2c97994.txn  5-2d73fd56-a0fe-4cc8-aa3c-5b03721d7270.txn  6-be29660e-d7c3-4184-babf-72ab2440aca6.txn
docling/data/lancedb/docling.lance/_versions/: 1.manifest  2.manifest  3.manifest  4.manifest  6.manifest  7.manifest  8.manifest
docling/data/lancedb/docling.lance/data/: 4d0d2f80-408a-4d7c-9ef7-cb5e661dc0d1.lance  61b9f364-fd0c-4882-b32c-503e7dcefb51.lance  a57b03ef-7348-46ad-8c3b-59b447d2e733.lance  a8b86607-d536-44f5-afd1-eb1f4a9c223b.lance  ff1de27a-a384-4490-92da-a6ae2ccc51df.lance
rag/: extraction.py
rag/data/lancedb/docling.lance/_transactions/: 2-2353671b-d2d1-4f0f-a44e-2258c9b33a44.txn  3-0647a72a-cf58-49ee-a8ef-70bcbea059ad.txn
src/ETL/: __init__.py  blob_load.py  crossref.py  wiley_doi.py
src/blob_utils/: from_blob.py
src/data_model/: articles_metadata.db  db.py  master_articles.json  model.py  test.ipynb
src/rag/: add_two_articles.py  chat.py  chunking.py  embedding.py
test_utils/: blob_load.py
(+5 files in other folders)
