[project]
name = "rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "azure-identity>=1.24.0",
    "azure-storage-blob>=12.26.0",
    "docling>=2.44.0",
    "lancedb>=0.24.2",
    "logging>=0.4.9.6",
    "openai>=1.99.9",
    "streamlit>=1.48.1",
    "tiktoken>=0.11.0",
    "wiley-tdm>=1.0.0",
]

[dependency-groups]
dev = [
    "ipykernel>=6.30.1",
]
